--- a/test/index.html
+++ b/test/index.html
@@ -1,13 +1,23 @@
 <!doctype html>
 <html>
   <head>
-    <script src="../node_modules/web-component-tester/browser.js"></script>
+    <!-- <script src="../node_modules/web-component-tester/browser.js"></script> -->
+    <script src="../node_modules/mocha/mocha.js"></script>
+    <script>
+      mocha.setup('tdd');
+    </script>
+    <script src="../node_modules/chai/chai.js"></script>
+    <link rel="stylesheet" href="../node_modules/mocha/mocha.css">
   </head>
   <body>
+    <div id="mocha"></div>
     <script type="module" src="./lit-html_test.js"></script>
     <script type="module" src="./lib/repeat_test.js"></script>
     <script type="module" src="./lib/until_test.js"></script>
     <script type="module" src="./lib/lit-extended_test.js"></script>
     <script type="module" src="./lib/unsafe-html_test.js"></script>
+    <script type="module">
+      mocha.run();
+    </script>
   </body>
 </html>
